--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "p = pd.Series(lst)"
    ]
   },
   {
@@ -61,11 +62,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.7\n",
+      "75.2\n",
+      "74.4\n",
+      "84.0\n",
+      "66.5\n",
+      "66.3\n",
+      "55.8\n",
+      "75.7\n",
+      "29.1\n",
+      "43.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "for i in p: print(i)"
    ]
   },
   {
@@ -77,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "df = pd.DataFrame(b)"
    ]
   },
   {
@@ -111,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +138,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+      "0     53.1     95.0     67.5     35.0     78.4\n",
+      "1     61.3     40.8     30.8     37.8     87.6\n",
+      "2     20.6     73.2     44.2     14.6     91.8\n",
+      "3     57.4      0.1     96.1      4.2     69.5\n",
+      "4     83.6     20.5     85.4     22.8     35.9\n",
+      "5     49.0     69.0      0.1     31.8     89.1\n",
+      "6     23.3     40.7     95.0     83.8     26.9\n",
+      "7     27.6     26.4     53.8     88.8     68.5\n",
+      "8     96.6     96.4     53.4     72.4     50.1\n",
+      "9     73.7     39.0     43.2     81.6     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "df = pd.DataFrame(b, columns = colnames)\n",
+    "\n",
+    "print (df)"
    ]
   },
   {
@@ -136,11 +174,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_3  Score_5\n",
+      "0     53.1     67.5     78.4\n",
+      "1     61.3     30.8     87.6\n",
+      "2     20.6     44.2     91.8\n",
+      "3     57.4     96.1     69.5\n",
+      "4     83.6     85.4     35.9\n",
+      "5     49.0      0.1     89.1\n",
+      "6     23.3     95.0     26.9\n",
+      "7     27.6     53.8     68.5\n",
+      "8     96.6     53.4     50.1\n",
+      "9     73.7     43.2     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "sub_df = df[[\"Score_1\",\"Score_3\",\"Score_5\"]]\n",
+    "\n",
+    "print(sub_df)"
    ]
   },
   {
@@ -152,11 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.95000000000001\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "avg3 = df[\"Score_3\"].mean()\n",
+    "\n",
+    "print(avg3)"
    ]
   },
   {
@@ -168,11 +236,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88.8\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "max4 = df[\"Score_4\"].max()\n",
+    "\n",
+    "print(max4)"
    ]
   },
   {
@@ -184,11 +262,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.75\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "median2 = df[\"Score_2\"].median()\n",
+    "\n",
+    "print(median2)"
    ]
   },
   {
@@ -200,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +309,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          Description Quantity UnitPrice Revenue\n",
+      "0              LUNCH BAG APPLE DESIGN        1      1.65    1.65\n",
+      "1  SET OF 60 VINTAGE LEAF CAKE CASES        24      0.55    13.2\n",
+      "2         RIBBON REEL STRIPES DESIGN         1      1.65    1.65\n",
+      "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS     2880      0.18   518.4\n",
+      "4    PLAYING CARDS JUBILEE UNION JACK        2      1.25     2.5\n",
+      "5                      POPCORN HOLDER        7      0.85    5.95\n",
+      "6      BOX OF VINTAGE ALPHABET BLOCKS        1     11.95   11.95\n",
+      "7                       PARTY BUNTING        4      4.95    19.8\n",
+      "8            JAZZ HEARTS ADDRESS BOOK       10      0.19     1.9\n",
+      "9       SET OF 4 SANTA PLACE SETTINGS       48      1.25      60\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "data = list([orders[\"Description\"],orders[\"Quantity\"], orders[\"UnitPrice\"],orders[\"Revenue\"]])\n",
+    "\n",
+    "po = pd.DataFrame(data).T\n",
+    "\n",
+    "po.columns = list(orders.keys())\n",
+    "\n",
+    "print (po)"
    ]
   },
   {
@@ -237,11 +349,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2978\n",
+      "637.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "qt = po[\"Quantity\"].sum()\n",
+    "\n",
+    "print (qt)\n",
+    "\n",
+    "rv = po[\"Revenue\"].sum()\n",
+    "\n",
+    "print(rv)"
    ]
   },
   {
@@ -253,11 +380,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.95\n",
+      "0.18\n",
+      "Difference: 11.77\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "expensive = po[\"UnitPrice\"].max()\n",
+    "\n",
+    "print(expensive)\n",
+    "\n",
+    "cheap = po[\"UnitPrice\"].min()\n",
+    "\n",
+    "print(cheap)\n",
+    "\n",
+    "print(\"Difference: \"+ str(expensive - cheap))"
    ]
   }
  ],
@@ -277,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
