--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "lst_series = pd.Series(lst)"
    ]
   },
   {
@@ -61,11 +62,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.4"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "lst_series[2]"
    ]
   },
   {
@@ -77,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +107,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0     1     2     3     4\n",
+      "0  53.1  95.0  67.5  35.0  78.4\n",
+      "1  61.3  40.8  30.8  37.8  87.6\n",
+      "2  20.6  73.2  44.2  14.6  91.8\n",
+      "3  57.4   0.1  96.1   4.2  69.5\n",
+      "4  83.6  20.5  85.4  22.8  35.9\n",
+      "5  49.0  69.0   0.1  31.8  89.1\n",
+      "6  23.3  40.7  95.0  83.8  26.9\n",
+      "7  27.6  26.4  53.8  88.8  68.5\n",
+      "8  96.6  96.4  53.4  72.4  50.1\n",
+      "9  73.7  39.0  43.2  81.6  34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "b_df = pd.DataFrame(b)\n",
+    "print(b_df)"
    ]
   },
   {
@@ -111,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +151,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+      "0     53.1     95.0     67.5     35.0     78.4\n",
+      "1     61.3     40.8     30.8     37.8     87.6\n",
+      "2     20.6     73.2     44.2     14.6     91.8\n",
+      "3     57.4      0.1     96.1      4.2     69.5\n",
+      "4     83.6     20.5     85.4     22.8     35.9\n",
+      "5     49.0     69.0      0.1     31.8     89.1\n",
+      "6     23.3     40.7     95.0     83.8     26.9\n",
+      "7     27.6     26.4     53.8     88.8     68.5\n",
+      "8     96.6     96.4     53.4     72.4     50.1\n",
+      "9     73.7     39.0     43.2     81.6     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "b_columns_df = pd.DataFrame(b,columns= colnames)\n",
+    "print(b_columns_df)"
    ]
   },
   {
@@ -136,11 +186,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_3  Score_5\n",
+      "0     53.1     67.5     78.4\n",
+      "1     61.3     30.8     87.6\n",
+      "2     20.6     44.2     91.8\n",
+      "3     57.4     96.1     69.5\n",
+      "4     83.6     85.4     35.9\n",
+      "5     49.0      0.1     89.1\n",
+      "6     23.3     95.0     26.9\n",
+      "7     27.6     53.8     68.5\n",
+      "8     96.6     53.4     50.1\n",
+      "9     73.7     43.2     34.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "#We create a copy of the dataframe before modifying it so it doesnt affect the original one. also axis 1 means columns, axis 0 rows.\n",
+    "b_columns_df_sub =b_columns_df.copy()\n",
+    "b_subset = b_columns_df_sub.drop([\"Score_2\", \"Score_4\"], axis=1)\n",
+    "print(b_subset)\n"
    ]
   },
   {
@@ -152,11 +223,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.95000000000001"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "b_columns_df.Score_3.mean()"
    ]
   },
   {
@@ -168,11 +250,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.8"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "b_columns_df.Score_4.max()"
    ]
   },
   {
@@ -184,11 +277,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.75"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "b_columns_df.Score_2.median()"
    ]
   },
   {
@@ -200,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +325,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          Description  Quantity  UnitPrice  Revenue\n",
+      "0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+      "1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+      "2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+      "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+      "4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n",
+      "5                      POPCORN HOLDER         7       0.85     5.95\n",
+      "6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n",
+      "7                       PARTY BUNTING         4       4.95    19.80\n",
+      "8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n",
+      "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "orders_df = pd.DataFrame(orders)\n",
+    "print(orders_df)"
    ]
   },
   {
@@ -237,11 +360,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2978\n",
+      "637.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(orders_df.Quantity.sum())\n",
+    "print(orders_df.Revenue.sum())\n"
    ]
   },
   {
@@ -253,11 +386,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.95\n",
+      "0.18\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "print(orders_df.UnitPrice.max())\n",
+    "print(orders_df.UnitPrice.min())"
    ]
   }
  ],
@@ -277,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
